# TCP_ProcessCloser

./: .gitignore  CMakeLists.txt  HandlerRequest.cpp  HandlerRequest.h  Listener.cpp  Listener.h  ProcessDispatcher.cpp  ProcessDispatcher.h  README.md  ServerTypes.cpp  ServerTypes.h  TagWorker.cpp  TagWorker.h  main.cpp
LinuxAPI/: Listener.cpp  Listener.h  ProcessDispatcher.cpp  ProcessDispatcher.h
WindowsAPI/: Listener.h  ProcessDispatcher.cpp
client-side/: CMakeLists.txt  ClientTypes.cpp  ClientTypes.h  ClientUI.cpp  ClientUI.h  ServerConnector.cpp  ServerConnector.h  TagWorker.cpp  main.cpp
client-side/LinuxAPI/: ServerConnector.cpp  ServerConnector.h
client-side/WindowsAPI/: ServerConnector.cpp  ServerConnector.h
server-side/: CMakeLists.txt  HandlerRequest.cpp  HandlerRequest.h  Listener.cpp  Listener.h  ServerTypes.h  TagWorker.cpp  main.cpp
server-side/LinuxAPI/: Listener.cpp  Listener.h  NetworkAPI.cpp  NetworkAPI.h  ProcessDispatcher.cpp  ProcessDispatcher.h
server-side/WindowsAPI/: Listener.cpp  Listener.h  NetworkAPI.cpp  NetworkAPI.h  ProcessDispatcher.h
services/: CMakeLists.txt  TagWorker.cpp  TagWorker.h  Types.cpp  Types.h
services/LinuxAPI/: NetworkAPI.cpp  NetworkAPI.h
services/WindowsAPI/: NetworkAPI.cpp  NetworkAPI.h
